# rakutenml

./: pyproject.toml
src/rakutenml/: __init__.py  preprocessing.py  tokenizer.py  vectorizer.py
