[project]
name = "rakutenml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Robin Monjo", email = "robinmonjo@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "nltk>=3.9.1",
    "numpy<2",
    "unidecode>=1.3.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
